Adding biding history Docs for API
